--- a/competition_code/TEST2-DecisionTree.ipynb
+++ b/competition_code/TEST2-DecisionTree.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "7c44a08c",
+   "execution_count": 10,
+   "id": "65d561d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,14 +12,14 @@
     "from lightgbm import LGBMClassifier\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
-    "train  = pd.read_csv('competition_data/train.csv')\n",
-    "test  = pd.read_csv('competition_data/test.csv')"
+    "train  = pd.read_csv('C:/Users/kang4/OneDrive/바탕 화면/Mach-iv/competition_data/train.csv')\n",
+    "test  = pd.read_csv('C:/Users/kang4/OneDrive/바탕 화면/Mach-iv/competition_data/test.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "bbb41be7",
+   "execution_count": 11,
+   "id": "dbc4f811",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "[5 rows x 70 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,8 +221,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "e866b31e",
+   "execution_count": 17,
+   "id": "f8922555",
    "metadata": {},
    "outputs": [
     {
@@ -231,81 +231,79 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 15000 entries, 0 to 14999\n",
-      "Data columns (total 70 columns):\n",
+      "Data columns (total 68 columns):\n",
       " #   Column        Non-Null Count  Dtype  \n",
       "---  ------        --------------  -----  \n",
-      " 0   index         15000 non-null  int64  \n",
-      " 1   Q1            14959 non-null  float64\n",
-      " 2   Q2            14931 non-null  float64\n",
-      " 3   Q3            14950 non-null  float64\n",
-      " 4   Q4            14929 non-null  float64\n",
-      " 5   Q5            14962 non-null  float64\n",
-      " 6   Q6            14952 non-null  float64\n",
-      " 7   Q7            14924 non-null  float64\n",
-      " 8   Q8            14952 non-null  float64\n",
-      " 9   Q9            14944 non-null  float64\n",
-      " 10  Q10           14928 non-null  float64\n",
-      " 11  Q11           14941 non-null  float64\n",
-      " 12  Q12           14933 non-null  float64\n",
-      " 13  Q13           14960 non-null  float64\n",
-      " 14  Q14           14964 non-null  float64\n",
-      " 15  Q15           14955 non-null  float64\n",
-      " 16  Q16           14967 non-null  float64\n",
-      " 17  Q17           14963 non-null  float64\n",
-      " 18  Q18           14937 non-null  float64\n",
-      " 19  Q19           14947 non-null  float64\n",
-      " 20  Q20           14955 non-null  float64\n",
-      " 21  Q21           14961 non-null  float64\n",
-      " 22  Q22           14962 non-null  float64\n",
-      " 23  Q23           14950 non-null  float64\n",
-      " 24  Q24           14939 non-null  float64\n",
-      " 25  Q25           14956 non-null  float64\n",
-      " 26  Q26           14932 non-null  float64\n",
-      " 27  country       14810 non-null  object \n",
-      " 28  introelapse   15000 non-null  int64  \n",
-      " 29  testelapse    15000 non-null  int64  \n",
-      " 30  surveyelapse  15000 non-null  int64  \n",
-      " 31  TIPI1         14947 non-null  float64\n",
-      " 32  TIPI2         14934 non-null  float64\n",
-      " 33  TIPI3         14921 non-null  float64\n",
-      " 34  TIPI4         14936 non-null  float64\n",
-      " 35  TIPI5         14930 non-null  float64\n",
-      " 36  TIPI6         14938 non-null  float64\n",
-      " 37  TIPI7         14936 non-null  float64\n",
-      " 38  TIPI8         14935 non-null  float64\n",
-      " 39  TIPI9         14936 non-null  float64\n",
-      " 40  TIPI10        14920 non-null  float64\n",
-      " 41  VCL1          15000 non-null  int64  \n",
-      " 42  VCL2          15000 non-null  int64  \n",
-      " 43  VCL3          15000 non-null  int64  \n",
-      " 44  VCL4          15000 non-null  int64  \n",
-      " 45  VCL5          15000 non-null  int64  \n",
-      " 46  VCL6          15000 non-null  int64  \n",
-      " 47  VCL7          15000 non-null  int64  \n",
-      " 48  VCL8          15000 non-null  int64  \n",
-      " 49  VCL9          15000 non-null  int64  \n",
-      " 50  VCL10         15000 non-null  int64  \n",
-      " 51  VCL11         15000 non-null  int64  \n",
-      " 52  VCL12         15000 non-null  int64  \n",
-      " 53  VCL13         15000 non-null  int64  \n",
-      " 54  VCL14         15000 non-null  int64  \n",
-      " 55  VCL15         15000 non-null  int64  \n",
-      " 56  VCL16         15000 non-null  int64  \n",
-      " 57  education     14833 non-null  float64\n",
-      " 58  urban         15000 non-null  int64  \n",
-      " 59  gender        14981 non-null  float64\n",
-      " 60  engnat        14953 non-null  float64\n",
-      " 61  age           15000 non-null  int64  \n",
-      " 62  hand          14953 non-null  float64\n",
-      " 63  religion      14755 non-null  float64\n",
-      " 64  orientation   14601 non-null  float64\n",
-      " 65  voted         14915 non-null  float64\n",
-      " 66  married       14918 non-null  float64\n",
-      " 67  familysize    14681 non-null  float64\n",
-      " 68  ASD           14911 non-null  float64\n",
-      " 69  nerdiness     15000 non-null  int64  \n",
-      "dtypes: float64(46), int64(23), object(1)\n",
-      "memory usage: 8.0+ MB\n"
+      " 0   Q1            14959 non-null  float64\n",
+      " 1   Q2            14931 non-null  float64\n",
+      " 2   Q3            14950 non-null  float64\n",
+      " 3   Q4            14929 non-null  float64\n",
+      " 4   Q5            14962 non-null  float64\n",
+      " 5   Q6            14952 non-null  float64\n",
+      " 6   Q7            14924 non-null  float64\n",
+      " 7   Q8            14952 non-null  float64\n",
+      " 8   Q9            14944 non-null  float64\n",
+      " 9   Q10           14928 non-null  float64\n",
+      " 10  Q11           14941 non-null  float64\n",
+      " 11  Q12           14933 non-null  float64\n",
+      " 12  Q13           14960 non-null  float64\n",
+      " 13  Q14           14964 non-null  float64\n",
+      " 14  Q15           14955 non-null  float64\n",
+      " 15  Q16           14967 non-null  float64\n",
+      " 16  Q17           14963 non-null  float64\n",
+      " 17  Q18           14937 non-null  float64\n",
+      " 18  Q19           14947 non-null  float64\n",
+      " 19  Q20           14955 non-null  float64\n",
+      " 20  Q21           14961 non-null  float64\n",
+      " 21  Q22           14962 non-null  float64\n",
+      " 22  Q23           14950 non-null  float64\n",
+      " 23  Q24           14939 non-null  float64\n",
+      " 24  Q25           14956 non-null  float64\n",
+      " 25  Q26           14932 non-null  float64\n",
+      " 26  introelapse   15000 non-null  int64  \n",
+      " 27  testelapse    15000 non-null  int64  \n",
+      " 28  surveyelapse  15000 non-null  int64  \n",
+      " 29  TIPI1         14947 non-null  float64\n",
+      " 30  TIPI2         14934 non-null  float64\n",
+      " 31  TIPI3         14921 non-null  float64\n",
+      " 32  TIPI4         14936 non-null  float64\n",
+      " 33  TIPI5         14930 non-null  float64\n",
+      " 34  TIPI6         14938 non-null  float64\n",
+      " 35  TIPI7         14936 non-null  float64\n",
+      " 36  TIPI8         14935 non-null  float64\n",
+      " 37  TIPI9         14936 non-null  float64\n",
+      " 38  TIPI10        14920 non-null  float64\n",
+      " 39  VCL1          15000 non-null  int64  \n",
+      " 40  VCL2          15000 non-null  int64  \n",
+      " 41  VCL3          15000 non-null  int64  \n",
+      " 42  VCL4          15000 non-null  int64  \n",
+      " 43  VCL5          15000 non-null  int64  \n",
+      " 44  VCL6          15000 non-null  int64  \n",
+      " 45  VCL7          15000 non-null  int64  \n",
+      " 46  VCL8          15000 non-null  int64  \n",
+      " 47  VCL9          15000 non-null  int64  \n",
+      " 48  VCL10         15000 non-null  int64  \n",
+      " 49  VCL11         15000 non-null  int64  \n",
+      " 50  VCL12         15000 non-null  int64  \n",
+      " 51  VCL13         15000 non-null  int64  \n",
+      " 52  VCL14         15000 non-null  int64  \n",
+      " 53  VCL15         15000 non-null  int64  \n",
+      " 54  VCL16         15000 non-null  int64  \n",
+      " 55  education     14833 non-null  float64\n",
+      " 56  urban         15000 non-null  int64  \n",
+      " 57  gender        14981 non-null  float64\n",
+      " 58  engnat        14953 non-null  float64\n",
+      " 59  age           15000 non-null  int64  \n",
+      " 60  hand          14953 non-null  float64\n",
+      " 61  religion      14755 non-null  float64\n",
+      " 62  orientation   14601 non-null  float64\n",
+      " 63  voted         14915 non-null  float64\n",
+      " 64  married       14918 non-null  float64\n",
+      " 65  familysize    14681 non-null  float64\n",
+      " 66  ASD           14911 non-null  float64\n",
+      " 67  nerdiness     15000 non-null  int64  \n",
+      "dtypes: float64(46), int64(22)\n",
+      "memory usage: 7.8 MB\n"
      ]
     }
    ],
@@ -315,8 +313,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "d7611aa5",
+   "execution_count": 13,
+   "id": "4b81d9be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,20 +324,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "ba0c455d",
+   "execution_count": 43,
+   "id": "0b2ca4fd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Q1             0\n",
+       "Q2             0\n",
+       "Q3             0\n",
+       "Q4             0\n",
+       "Q5             0\n",
+       "              ..\n",
+       "orientation    0\n",
+       "voted          0\n",
+       "married        0\n",
+       "familysize     0\n",
+       "ASD            0\n",
+       "Length: 67, dtype: int64"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#train을 target과 feature로 나눠줍니다.\n",
     "train_x=train.drop(['nerdiness'], axis=1)\n",
-    "train_y=train['nerdiness']"
+    "train_y=train['nerdiness']\n",
+    "\n",
+    "train_ = train.dropna(axis=0)\n",
+    "train__x = train_.drop(['nerdiness'],axis=1)\n",
+    "train__y = train_['nerdiness']\n",
+    "\n",
+    "train__x.isna().sum()\n",
+    "# train_x2 = train_x.dropna(axis=0)\n",
+    "# train_x2.isna().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "f65eca53",
+   "execution_count": 15,
+   "id": "4fbb0965",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,71 +376,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "fa8786a6",
+   "execution_count": 44,
+   "id": "fd333d77",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Q1              41\n",
-       "Q2              69\n",
-       "Q3              50\n",
-       "Q4              71\n",
-       "Q5              38\n",
-       "              ... \n",
-       "orientation    399\n",
-       "voted           85\n",
-       "married         82\n",
-       "familysize     319\n",
-       "ASD             89\n",
-       "Length: 67, dtype: int64"
+       "DecisionTreeClassifier(random_state=156)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "train_x.isna().sum()"
+    "dt_clf = DecisionTreeClassifier(random_state=156)\n",
+    "dt_clf.fit(train__x, train__y)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "41947479",
+   "execution_count": null,
+   "id": "d5d52aad",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Input contains NaN, infinity or a value too large for dtype('float32').",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_20476\\3913156606.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mdt_clf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mDecisionTreeClassifier\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrandom_state\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m156\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mdt_clf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrain_x\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain_y\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\anaconda3\\envs\\kev\\lib\\site-packages\\sklearn\\tree\\_classes.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, X, y, sample_weight, check_input, X_idx_sorted)\u001b[0m\n\u001b[0;32m    940\u001b[0m             \u001b[0msample_weight\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msample_weight\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    941\u001b[0m             \u001b[0mcheck_input\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcheck_input\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 942\u001b[1;33m             \u001b[0mX_idx_sorted\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mX_idx_sorted\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    943\u001b[0m         )\n\u001b[0;32m    944\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\envs\\kev\\lib\\site-packages\\sklearn\\tree\\_classes.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, X, y, sample_weight, check_input, X_idx_sorted)\u001b[0m\n\u001b[0;32m    164\u001b[0m             \u001b[0mcheck_y_params\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mensure_2d\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    165\u001b[0m             X, y = self._validate_data(\n\u001b[1;32m--> 166\u001b[1;33m                 \u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalidate_separately\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcheck_X_params\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcheck_y_params\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    167\u001b[0m             )\n\u001b[0;32m    168\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0missparse\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\envs\\kev\\lib\\site-packages\\sklearn\\base.py\u001b[0m in \u001b[0;36m_validate_data\u001b[1;34m(self, X, y, reset, validate_separately, **check_params)\u001b[0m\n\u001b[0;32m    576\u001b[0m                 \u001b[1;31m# :(\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    577\u001b[0m                 \u001b[0mcheck_X_params\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcheck_y_params\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mvalidate_separately\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 578\u001b[1;33m                 \u001b[0mX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcheck_array\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mcheck_X_params\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    579\u001b[0m                 \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcheck_array\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mcheck_y_params\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    580\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\envs\\kev\\lib\\site-packages\\sklearn\\utils\\validation.py\u001b[0m in \u001b[0;36mcheck_array\u001b[1;34m(array, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, estimator)\u001b[0m\n\u001b[0;32m    798\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    799\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mforce_all_finite\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 800\u001b[1;33m             \u001b[0m_assert_all_finite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mallow_nan\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mforce_all_finite\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"allow-nan\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    801\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    802\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mensure_min_samples\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\envs\\kev\\lib\\site-packages\\sklearn\\utils\\validation.py\u001b[0m in \u001b[0;36m_assert_all_finite\u001b[1;34m(X, allow_nan, msg_dtype)\u001b[0m\n\u001b[0;32m    114\u001b[0m             raise ValueError(\n\u001b[0;32m    115\u001b[0m                 msg_err.format(\n\u001b[1;32m--> 116\u001b[1;33m                     \u001b[0mtype_err\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmsg_dtype\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mmsg_dtype\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m \u001b[1;32melse\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    117\u001b[0m                 )\n\u001b[0;32m    118\u001b[0m             )\n",
-      "\u001b[1;31mValueError\u001b[0m: Input contains NaN, infinity or a value too large for dtype('float32')."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dt_clf = DecisionTreeClassifier(random_state=156)\n",
-    "dt_clf.fit(train_x, train_y)"
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "dt_clf.predict([[]])"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "kev",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "kev"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
