--- a/competition_code/TEST-notNAwithStandardScaler&RandomCV.ipynb
+++ b/competition_code/TEST-notNAwithStandardScaler&RandomCV.ipynb
@@ -1505,30 +1505,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "a08a3a6a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'reg_alpha': 0, 'num_leaves': 80, 'min_child_samples': 10, 'max_depth': 20, 'learning_rate': 0.1}\n",
+      "소요 시간 : \n",
+      "1441.6607868671417\n"
+     ]
+    }
+   ],
    "source": [
     "start_time=time.time()\n",
     "lgb= lgb.LGBMClassifier(\n",
-    "            \n",
+    "            n_estimators=1000\n",
     "        )\n",
     "parametes= {\n",
     "    'num_leaves':[20,40,60,80,100],'min_child_samples':[5,10,15],\n",
     "    'max_depth':[-1,5,10,20],'learning_rate':[0.05,0.1,0.2],'reg_alpha':[0,0.01,0.03]\n",
     "}\n",
-    "clf=RandomizedSearchCV(lgb,parametes,scoring='accuracy',n_iter=100)\n",
+    "clf=RandomizedSearchCV(lgb,parametes,scoring='roc_auc',n_iter=100)\n",
     "clf.fit(X=train_x,y=train_y)\n",
     "print(clf.best_params_)\n",
     "end_time=time.time()\n",
     "print('소요 시간 : ')\n",
-    "print(end-start)"
+    "print(end_time-start_time)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "id": "a53079c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 재학습 위한 공간"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "b166187c",
    "metadata": {},
    "outputs": [],
@@ -1539,10 +1559,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "1a830bc1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>nerdiness</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35447</th>\n",
+       "      <td>35447</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35448</th>\n",
+       "      <td>35448</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35449</th>\n",
+       "      <td>35449</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35450</th>\n",
+       "      <td>35450</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35451</th>\n",
+       "      <td>35451</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>35452 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       index  nerdiness\n",
+       "0          0         -1\n",
+       "1          1         -1\n",
+       "2          2         -1\n",
+       "3          3         -1\n",
+       "4          4         -1\n",
+       "...      ...        ...\n",
+       "35447  35447         -1\n",
+       "35448  35448         -1\n",
+       "35449  35449         -1\n",
+       "35450  35450         -1\n",
+       "35451  35451         -1\n",
+       "\n",
+       "[35452 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "submission = pd.read_csv('competition_data/sample_submission.csv')\n",
     "\n",
@@ -1551,7 +1679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "2c4f468c",
    "metadata": {},
    "outputs": [],
@@ -1561,22 +1689,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "13502c59",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>nerdiness</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35447</th>\n",
+       "      <td>35447</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35448</th>\n",
+       "      <td>35448</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35449</th>\n",
+       "      <td>35449</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35450</th>\n",
+       "      <td>35450</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35451</th>\n",
+       "      <td>35451</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>35452 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       index  nerdiness\n",
+       "0          0          0\n",
+       "1          1          1\n",
+       "2          2          1\n",
+       "3          3          1\n",
+       "4          4          1\n",
+       "...      ...        ...\n",
+       "35447  35447          1\n",
+       "35448  35448          1\n",
+       "35449  35449          1\n",
+       "35450  35450          1\n",
+       "35451  35451          1\n",
+       "\n",
+       "[35452 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "submission"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "ff608b1c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "submission.to_csv(\"baseline_notNA-withSC-Grid.csv\", index = False)"
+    "submission.to_csv(\"baseline_notNA-withSC-Random1000.csv\", index = False)"
    ]
   }
  ],
