--- a/competition_code/TEST-withNA&RandomCV&XGBOOST&이상치제거.ipynb
+++ b/competition_code/TEST-withNA&RandomCV&XGBOOST&이상치제거.ipynb
@@ -1343,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 240,
    "id": "5c0b872d",
    "metadata": {},
    "outputs": [],
@@ -1354,8 +1354,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
-   "id": "fb5fdbe5",
+   "execution_count": 251,
+   "id": "956d4dad",
    "metadata": {},
    "outputs": [
     {
@@ -1516,7 +1516,99 @@
       "2919.0\n",
       "---끝---\n",
       "\n",
-      "134\n"
+      "134\n",
+      "        Q1   Q2   Q3   Q4   Q5   Q6   Q7   Q8   Q9  Q10  Q11  Q12  Q13  Q14  \\\n",
+      "0      1.0  5.0  5.0  5.0  1.0  4.0  5.0  5.0  1.0  3.0  5.0  5.0  5.0  5.0   \n",
+      "1      4.0  4.0  4.0  4.0  4.0  5.0  4.0  4.0  3.0  3.0  1.0  4.0  5.0  3.0   \n",
+      "2      4.0  5.0  5.0  4.0  3.0  5.0  5.0  5.0  4.0  4.0  2.0  5.0  5.0  5.0   \n",
+      "3      4.0  4.0  4.0  2.0  4.0  3.0  3.0  5.0  3.0  4.0  5.0  2.0  2.0  4.0   \n",
+      "4      4.0  4.0  4.0  4.0  3.0  3.0  4.0  2.0  3.0  4.0  4.0  4.0  3.0  5.0   \n",
+      "...    ...  ...  ...  ...  ...  ...  ...  ...  ...  ...  ...  ...  ...  ...   \n",
+      "14995  2.0  5.0  4.0  3.0  3.0  4.0  4.0  4.0  3.0  4.0  1.0  4.0  4.0  3.0   \n",
+      "14996  5.0  4.0  5.0  4.0  4.0  5.0  5.0  4.0  4.0  5.0  1.0  4.0  4.0  4.0   \n",
+      "14997  4.0  5.0  5.0  5.0  5.0  5.0  5.0  5.0  4.0  5.0  4.0  5.0  5.0  5.0   \n",
+      "14998  5.0  5.0  4.0  5.0  5.0  5.0  5.0  1.0  5.0  5.0  3.0  5.0  4.0  4.0   \n",
+      "14999  5.0  4.0  2.0  5.0  2.0  2.0  4.0  2.0  4.0  4.0  4.0  4.0  3.0  3.0   \n",
+      "\n",
+      "       Q15  Q16  Q17  Q18  Q19  Q20  Q21  Q22  Q23  Q24  Q25  Q26  \\\n",
+      "0      5.0  5.0  5.0  1.0  5.0  5.0  1.0  5.0  1.0  5.0  1.0  1.0   \n",
+      "1      1.0  2.0  4.0  5.0  1.0  3.0  1.0  1.0  5.0  3.0  2.0  5.0   \n",
+      "2      1.0  3.0  5.0  3.0  5.0  2.0  2.0  1.0  2.0  4.0  2.0  5.0   \n",
+      "3      4.0  2.0  4.0  5.0  4.0  3.0  3.0  4.0  3.0  4.0  4.0  2.0   \n",
+      "4      5.0  2.0  4.0  1.0  4.0  2.0  4.0  2.0  3.0  4.0  4.0  4.0   \n",
+      "...    ...  ...  ...  ...  ...  ...  ...  ...  ...  ...  ...  ...   \n",
+      "14995  4.0  4.0  2.0  5.0  2.0  4.0  1.0  2.0  5.0  4.0  2.0  4.0   \n",
+      "14996  2.0  5.0  5.0  4.0  1.0  5.0  3.0  4.0  4.0  5.0  4.0  5.0   \n",
+      "14997  5.0  5.0  5.0  5.0  4.0  5.0  5.0  2.0  5.0  5.0  3.0  4.0   \n",
+      "14998  1.0  5.0  4.0  5.0  5.0  2.0  5.0  3.0  5.0  3.0  3.0  5.0   \n",
+      "14999  4.0  3.0  3.0  3.0  5.0  3.0  4.0  2.0  3.0  4.0  3.0  4.0   \n",
+      "\n",
+      "       introelapse  testelapse  surveyelapse  TIPI1  TIPI2  TIPI3  TIPI4  \\\n",
+      "0                3         553             6    4.0    3.0    5.0    1.0   \n",
+      "1                5          85           120    4.0    2.0    3.0    5.0   \n",
+      "2                9         108           100    1.0    2.0    3.0    1.0   \n",
+      "3                2         121           139    3.0    3.0    3.0    4.0   \n",
+      "4                3         640           216    3.0    3.0    4.0    4.0   \n",
+      "...            ...         ...           ...    ...    ...    ...    ...   \n",
+      "14995           12         103           161    2.0    2.0    4.0    3.0   \n",
+      "14996           31         106           179    3.0    2.0    4.0    5.0   \n",
+      "14997           17         103           168    1.0    3.0    2.0    5.0   \n",
+      "14998           14          68           109    1.0    1.0    3.0    5.0   \n",
+      "14999            8         182           348    4.0    3.0    3.0    3.0   \n",
+      "\n",
+      "       TIPI5  TIPI6  TIPI7  TIPI8  TIPI9  TIPI10  VCL1  VCL2  VCL3  VCL4  \\\n",
+      "0        3.0    5.0    5.0    3.0    5.0     3.0     1     1     0     1   \n",
+      "1        3.0    2.0    5.0    1.0    2.0     2.0     1     1     1     1   \n",
+      "2        5.0    5.0    3.0    4.0    5.0     2.0     1     1     0     1   \n",
+      "3        5.0    3.0    4.0    4.0    3.0     3.0     1     1     0     1   \n",
+      "4        4.0    4.0    3.0    4.0    3.0     2.0     1     1     0     1   \n",
+      "...      ...    ...    ...    ...    ...     ...   ...   ...   ...   ...   \n",
+      "14995    3.0    5.0    3.0    3.0    3.0     3.0     1     1     1     1   \n",
+      "14996    4.0    3.0    4.0    1.0    2.0     2.0     1     1     0     1   \n",
+      "14997    1.0    5.0    3.0    3.0    1.0     1.0     1     1     0     1   \n",
+      "14998    4.0    5.0    5.0    4.0    2.0     1.0     1     1     1     1   \n",
+      "14999    4.0    2.0    4.0    4.0    3.0     2.0     1     1     1     1   \n",
+      "\n",
+      "       VCL5  VCL6  VCL7  VCL8  VCL9  VCL10  VCL11  VCL12  VCL13  VCL14  VCL15  \\\n",
+      "0         1     0     0     0     0      1      0      0      0      1      1   \n",
+      "1         1     0     1     0     0      1      0      0      1      1      1   \n",
+      "2         1     0     1     1     0      1      0      0      1      1      1   \n",
+      "3         1     0     0     0     0      1      0      0      1      1      1   \n",
+      "4         1     0     0     1     0      1      0      0      0      1      0   \n",
+      "...     ...   ...   ...   ...   ...    ...    ...    ...    ...    ...    ...   \n",
+      "14995     1     0     0     0     0      1      0      1      1      1      1   \n",
+      "14996     1     0     0     0     0      1      0      0      0      1      1   \n",
+      "14997     1     0     0     0     0      1      0      0      1      1      1   \n",
+      "14998     1     0     0     1     0      1      0      1      1      1      1   \n",
+      "14999     1     0     0     0     1      1      1      1      1      1      1   \n",
+      "\n",
+      "       VCL16  education  urban  gender  engnat  age  hand  religion  \\\n",
+      "0          1        2.0      1     3.0     1.0   20   2.0      12.0   \n",
+      "1          1        4.0      2     2.0     1.0   49   1.0       2.0   \n",
+      "2          1        2.0      1     1.0     2.0   43   1.0       2.0   \n",
+      "3          1        1.0      3     1.0     1.0   17   2.0       1.0   \n",
+      "4          1        1.0      2     2.0     2.0   18   2.0      12.0   \n",
+      "...      ...        ...    ...     ...     ...  ...   ...       ...   \n",
+      "14995      1        2.0      2     2.0     1.0   17   1.0       1.0   \n",
+      "14996      1        4.0      1     2.0     2.0   45   1.0       3.0   \n",
+      "14997      1        2.0      2     2.0     1.0   20   1.0       1.0   \n",
+      "14998      1        3.0      2     2.0     1.0   29   1.0      12.0   \n",
+      "14999      1        2.0      3     1.0     2.0   21   1.0       2.0   \n",
+      "\n",
+      "       orientation  voted  married  familysize  ASD  \n",
+      "0              4.0    2.0      1.0         4.0  2.0  \n",
+      "1              1.0    1.0      2.0         4.0  2.0  \n",
+      "2              2.0    2.0      3.0         4.0  2.0  \n",
+      "3              1.0    2.0      1.0         2.0  2.0  \n",
+      "4              1.0    2.0      1.0         1.0  2.0  \n",
+      "...            ...    ...      ...         ...  ...  \n",
+      "14995          3.0    2.0      1.0         3.0  2.0  \n",
+      "14996          1.0    1.0      2.0         3.0  2.0  \n",
+      "14997          2.0    1.0      1.0         3.0  1.0  \n",
+      "14998          4.0    2.0      2.0         2.0  1.0  \n",
+      "14999          2.0    2.0      1.0         1.0  2.0  \n",
+      "\n",
+      "[14866 rows x 67 columns]\n"
      ]
     }
    ],
@@ -1537,14 +1629,15 @@
     "#     Q1 : 100개의 데이터로 가정 시, 75번째로 높은 값\n",
     "#     IQR : Q3 - Q1의 차이\n",
     "\n",
+    "tmp_x = train_x\n",
+    "df = train_x[['introelapse','testelapse','surveyelapse','age','familysize']]\n",
     "\n",
     "def delete_outlier(x):\n",
     "    sum = 0\n",
-    "\n",
+    "    global df,tmp_x\n",
     "    q3 = train_x.quantile(0.75)\n",
     "    q1 = train_x.quantile(0.25)\n",
     "    iqr = q3-q1\n",
-    "    df = train_x[['introelapse','testelapse','surveyelapse','age','familysize']]\n",
     "\n",
     "    for col in df.columns:\n",
     "        index = df[(df[col] > q3[col]+x*iqr[col]) | (df[col] < q1[col]-x*iqr[col])].index\n",
@@ -1556,9 +1649,12 @@
     "            print(\"---끝---\\n\")\n",
     "            sum +=len(index)\n",
     "        df = df.drop(index)\n",
-    "    \n",
+    "        tmp_x = tmp_x.drop(index)\n",
     "    #총 이상치 개수\n",
     "    print(sum)\n",
+    "\n",
+    "    \n",
+    "\n",
     "\n",
     "delete_outlier(500)\n",
     "\n"
@@ -2191,7 +2287,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d6b2343d",
+   "id": "0812a78d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2201,7 +2297,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "9f65ff5d",
+   "id": "8c22cb81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2211,7 +2307,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "9a0cf071",
+   "id": "7336a1b8",
    "metadata": {},
    "outputs": [
     {
